# warbear

./: Dockerfile  README.md  docker-compose.yml  instructions.md  pyproject.toml
app/backend/: Dockerfile  app.py
app/backend/interface/: api.py
app/backend/model/: Progress.py  WorkItem.py  WorkItemCollection.py
app/backend/service/: redis_store.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html  styles.css
frontend/src/: App.js  WorkItemsPage.js  config.js
