[tool.poetry]
name = "workboard_web"
version = "0.1.0"
description = ""
authors = ["Scobie Smith <spsmith@finitestate.com>"]
readme = "workboard_web/README.md"
packages = [{include = "workboard_web"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11.0"
fastapi = "^0.115.12"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
